public/blog/blog.css
:root{
  --yellow:#E2DBC7;
  --lteal:#9db5b7;
  --highlightteal:#B7CBD6;
  --teal:#1C3F5C;
  --blue:#0E1A36;
  --dblue:#000527;
  --shadow:#1b357082;
  --bg:#0b263b75, #1f084e73;
  --gradient1: #228bff3b;
  --gradient2: #9eccff24;
}

#star {
  animation: spin infinite;
  animation-timing-function: linear;
  animation-duration: 1.5s;
  display:inline-block;
}
@keyframes spin {0% {rotate:0deg;}100% {rotate:360deg;}}
/*Blog pages*/
#bg{
  position: fixed;
  height: 100vh;
  width: 100vw;
  top:0;
  left: 0;
  object-fit: cover;
}
.blognav {
  position:fixed;
  z-index: 99;
  width: 100%;
  background: rgb(15 14 49 / 50%); 
  bottom:0;
  padding: 10px 0;
  display: flex;
justify-content: space-around;
  }
  .blognav a,.blognav span:not(a span){
    filter: var(--dropshadow);
    display: inline-block;
    padding:3px 6px;
  }
  .blognav span:not(a span){
    color: var(--yellow);
  }
  .blognav a {
  background: var(--yellow);
  filter: var(--dropshadow);
  border-radius: 5px;
  color: var(--blue);
  text-decoration-color: var(--blue);
  }
  .blognav a span{
    border-radius: 5px;
    padding: 0 7.5px;
    filter: var(--dropshadow);
    background: linear-gradient(135deg, var(--gradient1),var(--gradient2));
  }
  .blognav a:hover,.blognav a:focus{
    background: #bcb9d6de;
    transition: background 0.5s;
  translate:var(--down);
  filter:var(--dropshadowdown);
}

.blog{
  padding:7.5px;
}
.simple{
  min-height: calc(100vh - 45px);
  position: static;
}
.simple main{
  padding-top: 0;
}
.simple article{
  margin: 15px 15%;
  margin-top: 45px !important;
  background: var(--yellow);
  border-radius: 7.5px;
  box-shadow: 4px 4px 4px 2px var(--shadow);
}
@media(max-width:700px){
  .simple .blog{
    margin: 15px 7.5px;
  }
}
section .inner h2:first-child {
  margin: 0;
  font-size: 1.75em;
}
/*Status box in blog page*/
.statusbox {
	width:75%;
	margin: 0.75em auto;
	display:grid;
	grid-template: 'a b''c d';
	grid-gap: 7.5px;
	    grid-auto-columns: minmax(0, 1fr);
    grid-auto-flow: row;
}
.statuscolumn p:first-child{
  grid-area: a;
}
.statuscolumn p:nth-child(2){
  grid-area: b;
}
.statuscolumn p:nth-child(3){
  grid-area: c;
}
.statuscolumn p:nth-child(4){
  grid-area: d;
}
.statusbox p{
  padding: 5px 10px;
  filter: var(--dropshadow);
  margin:0;
  text-indent: 0 !important;
}
.statusbox p:first-child,.statusbox p:nth-child(2) {
    background: linear-gradient(var(--gradient1), color-mix(in srgb, var(--gradient1), var(--gradient2)));
}

.statusbox p:nth-child(3),.statusbox p:nth-child(4) {
    background: linear-gradient(color-mix(in srgb, var(--gradient1), var(--gradient2)),var(--gradient2));
}
.bloginfo{
  margin: 0 auto;
  width: 80%;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}
.blogtags{
  font-size: 1.1em;
  color: var(--yellow);
  border-radius: 5px;
  padding: 4px 12px;
  filter: var(--dropshadow);
  background: linear-gradient(var(--teal), var(--gradient1));
  display: inline-block;
}
.blogwords{
  opacity: 0.75;
  font-size: 0.75em;
  text-decoration: underline dashed;
  text-decoration-thickness: auto;
  text-decoration-thickness: 1px;
  margin-left: auto;
}
@media(max-width:800px){
  .statusbox {
	width:100%;
	grid-template: 'a' 'b''c' 'd';
}
.blogtag{
  width:100%;
}
.statusbox p{
  width: -webkit-fill-available;
  width:-moz-available;
}
}
.blogcredit{
    background: linear-gradient(var(--gradient1), var(--gradient2));
    color: var(--blue);
    padding: 0px 15px;
    margin: 0 20px;
    filter: var(--dropshadow);
    display: inline-block;
    border-radius: 5px;
    width: -webkit-fill-available;
    width:-moz-available;
}
.blogcredit h2{
  text-shadow: none;
  border-bottom: 1.75px dashed;
    padding: 15px 0px;
    color: var(--teal);
    border-color: var(--teal);
    margin: 0;
}
@media(max-width:800px){
  .blogcredit {
	margin:0;
}
}
.recap{background:url(/assets/paper-texture.png);background-color:rgba(0,0,0,0);background-color:#fff;box-shadow:1px 1px 1px var(--shadow);border-radius:5px;padding:5px;margin:.75em auto}

